--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,36 @@
             "DiegoBrocanelli\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
     "authors": [
         {
             "name": "Diego Brocanelli",
             "email": "diegod2@msn.com"
         }
     ],
-    "require": {}
+    "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "squizlabs/php_codesniffer": "^3.7",
+        "friendsofphp/php-cs-fixer": "^3.11",
+        "phpmd/phpmd": "^2.13",
+        "phploc/phploc": "^7.0",
+        "phpstan/phpstan": "^1.8",
+        "icanhazstring/composer-unused": "^0.8.2",
+        "vimeo/psalm": "^4.27"
+    },
+    "scripts": {
+        "tests": "vendor/bin/phpunit tests --color --testdox",
+        "analyse": [
+            "phpcbf --standard=PSR1,PSR12 src tests",
+            "phpcs --standard=PSR1,PSR12 src tests",
+            "phpmd ./src ansi cleancode,codesize,unusedcode,naming,design,controversial",
+            "phpmd ./tests ansi cleancode,codesize,unusedcode,naming,design,controversial",
+            "phpstan analyse --level=8 src",
+            "phpstan analyse --level=8 tests"
+        ]
+    }
 }
